Created gallery contact us page and modified index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ p {
   
   /* footer */
   
-  footer{
+  footer {
       height: 100px;
   }
   
@@ -26,7 +26,7 @@ p {
       font-size: 160%;
       margin: 1%;
       padding: 5%;
-      color: #AB1E24;
+      color: #1E2341;
   }
   /* Gallery image size */
   
