--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,14 +89,18 @@ p {
 left: 0;
 position: relative;
 width: 100%;
-height: 100%;
+height: 200px;
 
 
     background-color: #1E2341;
     color: #E0E0E0;
+    margin-bottom: 0px;
     
   }
 
   h1 {
-    position: relative;
+    text-align: center;
+    padding-top: 60px;
   }
+
+  
