Fixed menu bar in gallery and added description to banner.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,7 @@ p {
   font-family: 'Open Sans', sans-serif;
 }
 
-h2,
-h3 {
+h2, h3 {
   font-family: 'Meow Script', cursive;
   font-family: 'Open Sans', sans-serif;
 }
@@ -95,4 +94,8 @@ footer {
 #logo {
   max-width: 50%;
   max-height: 50%;
+}
+
+.margine {
+  margin: 5px;
 }
