Added fonts and removed banner motto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Meow+Script&family=Open+Sans&display=swap');
+body {
+  font-family: 'Roboto Condensed', sans-serif;
+}
 
 p {
   font-size: 1rem;
-  font-family: 'Meow Script', cursive;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 h2, h3 {
-  font-family: 'Meow Script', cursive;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
 }
 
 h2 {
   text-align: center;
   text-transform: uppercase;
+  font-weight: bold;
   
 }
 
@@ -162,6 +163,5 @@ a {
   margin-bottom: 0;
 }
 
-.footer-basic {
-}
+
 
